# llama.cpp

./: .gitignore  CMakeLists.txt  README.md  _hard.txt  hotpot_qa.json  hotpot_qa_3.json  result.csv  run_android.sh  run_local.sh  run_termux  run_termux0,4,6,8,10,12,16   run_termux0,4,6,8,10,12,16 _11  run_termux10, 12, 16  run_termux6,8
assets/: model_src.json
common/: arg.cpp  common.cpp  common.h
data/: hard_info_termux.txt
dataset/: hotpot_qa.json  hotpot_qa_30.json
examples/: CMakeLists.txt
examples/ignite/: CMakeLists.txt  ignite.cpp
examples/main/: CMakeLists.txt  main.cpp  main.cpp.backup  main_csv.cpp
examples/main/.ipynb_checkpoints/: main-checkpoint.cpp
examples/main/hard/: device.cpp  device.h  dvfs.cpp  dvfs.h  readme.txt  record.cpp  record.h
examples/phase-pause/: CMakeLists.txt  phase-pause.cpp
examples/phase-pause/hard/: example.cpp  record.h
ggml/include/: ggml-backend.h
ggml/src/: ggml-backend.cpp
include/: llama.h
main/: CMakeLists.txt  ignite-npu.cpp  ignite.cpp
outputs/: result.csv  result_4096.csv  result_il_os.csv  result_is_os.csv  result_multi.csv  result_test.csv
outputs/.ipynb_checkpoints/: result-checkpoint.csv  result_4096-checkpoint.csv  result_il_os-checkpoint.csv  result_is_os-checkpoint.csv  result_multi-checkpoint.csv  result_test-checkpoint.csv
scripts/: build-linux.sh  build.sh
scripts-termux/: ignite-qwen.sh  qwen3_run.sh  run.sh  run2.sh
src/: CMakeLists.txt  llama-context.cpp  llama-context.h  llama-ignite.cpp  llama-ignite.h
src/hard/: dvfs.cpp  dvfs.h  record.cpp  record.h  utils.cpp  utils.h
test_files/: eval_test.json  l_data.json  l_data_20.json  linear.json  test.csv  test.json
test_files/.ipynb_checkpoints/: s_data-checkpoint.json
tools/: json_extractor.py
tools/main/: main.cpp
